--- a/Clap1/Base.lproj/Main.storyboard
+++ b/Clap1/Base.lproj/Main.storyboard
@@ -31,6 +31,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="clapPickerView" destination="qEh-0T-NAo" id="TlC-nQ-OhC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
