--- a/Clap1/Base.lproj/Main.storyboard
+++ b/Clap1/Base.lproj/Main.storyboard
@@ -17,14 +17,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="stage.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="zy6-E2-QOg">
+                                <rect key="frame" x="0.0" y="20" width="375" height="285"/>
+                            </imageView>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qEh-0T-NAo">
                                 <rect key="frame" x="0.0" y="350" width="375" height="216"/>
                             </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mzk-1j-Fda">
-                                <rect key="frame" x="104" y="80" width="166" height="156"/>
+                                <rect key="frame" x="189" y="129" width="166" height="156"/>
                                 <state key="normal" backgroundImage="clap-button.png"/>
                                 <connections>
                                     <action selector="playButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="U38-DZ-kSy"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XDH-OD-iFF">
+                                <rect key="frame" x="98" y="285" width="179" height="78"/>
+                                <state key="normal" backgroundImage="piano.png"/>
+                                <connections>
+                                    <action selector="pianoButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="E6z-NG-yTh"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -33,6 +43,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="clapPickerView" destination="qEh-0T-NAo" id="TlC-nQ-OhC"/>
+                        <outlet property="pianoPickerView" destination="qEh-0T-NAo" id="lMR-Yf-dLY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -42,5 +53,7 @@
     </scenes>
     <resources>
         <image name="clap-button.png" width="100" height="100"/>
+        <image name="piano.png" width="500" height="313"/>
+        <image name="stage.jpg" width="640" height="427"/>
     </resources>
 </document>
